# SOL_MultiSender

./: .env  Cargo.toml  README.md
files/: accounts.txt
src/: main.rs
